// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with multiple expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Showing 
      <span>
        3
      </span>
       of 
      expenses
       totalling 
      <span>
        $1,200.35
      </span>
       
    </h1>
    <h1
      className="page-header__title"
    >
      <span />
       hidden 
      expenses
        not being shown.
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render expenses summary with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Showing 
      <span>
        1
      </span>
       of 
      expense
       totalling 
      <span>
        $200.35
      </span>
       
    </h1>
    <h1
      className="page-header__title"
    >
      <span />
       hidden 
      expenses
        not being shown.
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
